fix(breadcrumbs): text wrap & overflow

--- a/packages/components/base/src/breadcrumbs/styles/index.module.scss
+++ b/packages/components/base/src/breadcrumbs/styles/index.module.scss
@@ -5,6 +5,5 @@
   align-items: center;
   gap: theme.get-spacing(0.5);
   color: theme.get-color(neutral-dark-100);
-
-  @include theme.focus;
+  white-space: nowrap;
 }
